# changefeed

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DESIGN.md  HOW_IT_WORKS.md  README.md
crates/cf/: Cargo.toml
crates/cf-core/: Cargo.toml
crates/cf-core/benches/: pipeline_bench.rs
crates/cf-core/packs/: api-docs.toml  default.toml  pricing.toml  status-page.toml
crates/cf-core/src/: config.rs  event.rs  extract.rs  fetch.rs  lib.rs  model.rs  normalize.rs  packs.rs  pipeline.rs  segment.rs  storage.rs
crates/cf-core/src/diff/: align.rs  cluster.rs  intra.rs  lis.rs  lsh.rs  mask.rs  mod.rs  noise.rs  tests.rs
crates/cf-core/src/salience/: action.rs  combine.rs  confidence.rs  mod.rs  signals.rs  tests.rs
crates/cf-core/src/schema/: v1.json
crates/cf-core/tests/: contract.rs  normalize_linchpin.rs
crates/cf/src/: cli.rs  config_io.rs  ctx.rs  fetch_http.rs  ids_clock.rs  main.rs  render.rs  store_sqlite.rs
crates/cf/src/fetch_http/: tests.rs
crates/cf/tests/: agent_contract.rs  cli_integration.rs
tests/fixtures/: lowsal_after.html  lowsal_before.html  pricing_after.html  pricing_before.html  pricing_noop.html
